[gd_scene format=3 uid="uid://bbplttl62abt3"]

[ext_resource type="PackedScene" uid="uid://bgb34iwajlgui" path="res://player.tscn" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="3_fc0e3"]
[ext_resource type="Script" uid="uid://b1scj2iaoy8ce" path="res://pause_node.gd" id="3_feb5d"]
[ext_resource type="Texture2D" uid="uid://bkvmydfn5saxg" path="res://addons/virtual_joystick/textures/joystick_tip.png" id="4_fc0e3"]
[ext_resource type="Texture2D" uid="uid://dpepuf8fom427" path="res://menu_icon.svg" id="5_7jktm"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_7dm0k"]

[sub_resource type="PlaneMesh" id="PlaneMesh_ig7tw"]
size = Vector2(20, 20)

[node name="game" type="Node" unique_id=280679977]

[node name="Ground" type="StaticBody3D" parent="." unique_id=407645860]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground" unique_id=1300156854]
shape = SubResource("WorldBoundaryShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground" unique_id=1145822956]
mesh = SubResource("PlaneMesh_ig7tw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1844161168]
transform = Transform3D(1, 0, 0, 0, 0.0049566585, 0.9999877, 0, -0.9999877, 0.0049566585, 0, 6.007435, 0)
shadow_enabled = true

[node name="Player" parent="." unique_id=617305847 instance=ExtResource("1_80nbo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1385890045]
process_mode = 3
script = ExtResource("3_feb5d")

[node name="PauseBloor" type="ColorRect" parent="CanvasLayer" unique_id=521968083]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.09803922)

[node name="PauseCnt" type="VBoxContainer" parent="CanvasLayer" unique_id=843075827]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/PauseCnt" unique_id=1205692755]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Go to menu?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseCnt" unique_id=2055256532]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ToMain" type="Button" parent="CanvasLayer/PauseCnt/HBoxContainer" unique_id=897794180]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Yes"

[node name="CancelMain" type="Button" parent="CanvasLayer/PauseCnt/HBoxContainer" unique_id=968382063]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "No"

[node name="Virtual Joystick" parent="CanvasLayer" unique_id=904890145 instance=ExtResource("3_fc0e3")]
pressed_color = Color(0, 1, 0, 1)
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_forward"
action_down = "move_back"

[node name="JumpBox" type="Control" parent="CanvasLayer" unique_id=904322744]
layout_direction = 2
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1146.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="JumpButton" type="TouchScreenButton" parent="CanvasLayer/JumpBox" unique_id=1088644918]
position = Vector2(950, 400)
texture_normal = ExtResource("4_fc0e3")
action = "jump"
visibility_mode = 1

[node name="MenuButton" type="TouchScreenButton" parent="CanvasLayer" unique_id=791534609]
process_mode = 3
position = Vector2(12, 3)
scale = Vector2(3.25, 3.25)
texture_normal = ExtResource("5_7jktm")
action = "pause"
visibility_mode = 1

[connection signal="pressed" from="CanvasLayer/PauseCnt/HBoxContainer/ToMain" to="CanvasLayer" method="_on_to_main_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseCnt/HBoxContainer/CancelMain" to="CanvasLayer" method="_on_cancel_main_pressed"]
